frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.image-pull-policy: Never
    kompose.service.type: LoadBalancer
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.image-pull-policy: Never
        kompose.service.type: LoadBalancer
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: frontend
          imagePullPolicy: Never
          name: frontend
          ports:
            - containerPort: 3000
          resources: {}
      hostname: frontend
      restartPolicy: Always
status: {}
