frontend-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.image-pull-policy: Never
    kompose.service.type: LoadBalancer
    kompose.version: 1.25.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend-tcp
  name: frontend-tcp
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: frontend
  type: LoadBalancer
status:
  loadBalancer: {}
